# rapture-minecraft

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cliff.toml  main.tf
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: release.yaml
EC2/: README.MD  main.tf
ansible/: .gitignore  ansible.cfg  deployment.yml  pyproject.toml  requirements.yml
ansible/extensions/molecule/docker/: converge.yml  molecule.yml
ansible/extensions/molecule/docker/tests/: test_default.py
ansible/inventory_plugins/: read_terraform_state.py
ansible/roles/docker/: README.md
ansible/roles/docker/defaults/: main.yml
ansible/roles/docker/tasks/: main.yml  teardown.yml
ansible/roles/minecraft_server/tasks/: main.yml  teardown.yml
terraform/: .terraform.lock.hcl  aws.tf  main.tf  output.tf  terraform.tf  variables.tf
terraform/templates/: ansible_vars.yml.tftpl
