[project]
name = "rapture-minecraft-ansible"
version = "0.1.0"
description = ""
authors = [
    {name = "Guilhem Santé", email = "guilhem.sante@kelps.org"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ansible (>=11.5.0,<12.0.0)",
    "boto3 (>=1.38.3,<2.0.0)",
    "docker-py (>=1.10.6,<2.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "molecule (>=25.4.0,<26.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
